--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "dky",
   "license": "ISC",
   "devDependencies": {
-    "@vuepress/plugin-docsearch": "^2.0.0-beta.36",
+    "@vuepress/plugin-search": "^2.0.0-beta.36",
     "vuepress": "^2.0.0-beta.36"
   },
   "packageManager": "yarn@1.22.17"
