--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vuepress/plugin-search": "^2.0.0-beta.36",
+    "@vuepress/plugin-shiki": "^2.0.0-beta.36",
     "vuepress": "^2.0.0-beta.36"
   },
   "packageManager": "yarn@1.22.17"
